sumo/tests/duarouter/errors/no_input_ignore/routes.duarouter
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on Wed May  6 10:55:06 2015 by SUMO duarouter Version dev-SVN-r18341I
<?xml version="1.0" encoding="UTF-8"?>

<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/duarouterConfiguration.xsd">

    <input>
        <net-file value="input_net.net.xml"/>
    </input>

    <output>
        <output-file value="routes.rou.xml"/>
    </output>

    <processing>
        <ignore-errors value="true"/>
    </processing>

    <report>
        <xml-validation value="never"/>
        <no-step-log value="true"/>
    </report>

</configuration>
-->

<routes xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/routes_file.xsd"/>
